// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSelector should render with color picker 1`] = `
<div
  className="sc-AxjAm dJPXrI"
  onClick={[Function]}
>
  <div
    className="sc-AxirZ dSOPNa"
    onChange={[Function]}
  >
    This is mocked ChromePicker. Color is 
  </div>
</div>
`;

exports[`ColorSelector should render without color picker 1`] = `
<div
  className="sc-AxjAm kbZGaf"
  onClick={[Function]}
>
  <div
    className="sc-AxirZ dSOPNa"
    onChange={[Function]}
  >
    This is mocked ChromePicker. Color is 
  </div>
</div>
`;
